@@ -1,10 +1,11 @@
-xboxdrv 0.8.1 - (??/Jun/2011)
+xboxdrv 0.8.1 - (??/Jul/2011)
 =============================
 
 * added support for an unlimited number shift buttons
 * added cycle-key support to cycle through a sequence of buttons
 * fixed rumble messages getting delayed
 * fixed keys not getting pressed in --ui-axismap
+* reenabled --priority realtime
 
 
 xboxdrv 0.8.0 - (26/May/2011)
